3-Devops/4-GCP/B - GCP avançado/02-GKE-Kubernetes-Orchestration/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: study-gke
  labels:
    app.kubernetes.io/part-of: study-gke-stack
