3-Devops/4-GCP/B - GCP avançado/02-GKE-Kubernetes-Orchestration/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-api-service
  namespace: study-gke
spec:
  selector:
    app: study-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
