3-Devops/4-GCP/B - GCP avançado/02-GKE-Kubernetes-Orchestration/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: study-api-ingress
  namespace: study-gke
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: study-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: study-api-service
                port:
                  number: 80
